<resources>
    <string name="app_name">TUT Libraries</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="audiobooks">Audio-books</string>
    <string name="ebooks">E-Books</string>
    <string name="paper_books">Paper-based books</string>
    <string name="available_resources">Available resources</string>
    <string name="librarian">Talk to librarian</string>
    <string name="lease_renewal">Renew leases</string>
    <string name="our_services">Our services</string>
    <string name="payfine">Pay fines</string>
    <string name="track_orders">Order status</string>
    <string name="confirm_password">Confirm password</string>
    <string name="student_no">Student number</string>
    <string name="loading">Loading, please wait...</string>
    <string name="Library_Key">M0846833</string>
    <string name="bookTitle">Marketing Tourism in South Africa 6e</string>
    <string name="author">Author: </string>
    <string name="authorseg">R. George</string>
    <string name="leaseday">Start-lease: </string>
    <string name="endlease">End-lease: </string>
    <string name="startdateeg">15/03/2021</string>
    <string name="enddateeg">27/03/2021</string>
    <string name="renew_lease">Renew lease</string>
    <string name="fine_amount">Amount: R</string>
    <string name="fine_amounteg">30.00</string>
    <string name="fine_title">Late return of book</string>
    <string name="date">Date: </string>
    <string name="payfine_text">Pay fine</string>
    <string name="leasebook">Lease book</string>
    <string name="isbn">ISBN: </string>
    <string name="pages">Pages: </string>
    <string name="time_tmp">18:36</string>
    <string-array name="CardType">
        <item>Debit</item>
        <item>Credit</item>
    </string-array>
    <string name="myaccommodations">My Accommodations</string>
    <string name="message_sent_text">Message sent!</string>
    <string name="message_sent_error">Error, could not send blank message.</string>
    <string name="librarian_text">Librarian</string>
    <string name="default_notification_channel_id">"1086560298590"</string>
</resources>