<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/mainlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivBookimage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/acc_item_size"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/book1"
                android:adjustViewBounds="true"
                android:layout_weight="3"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/formMargin"
                android:layout_weight="1" >
                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bookTitle"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/author"
                        android:textStyle="bold"
                        android:maxLines="2"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/black" />
                    <TextView
                        android:id="@+id/tvAuthor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/authorseg"
                        android:maxLines="2"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/black" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/isbn"
                        android:textStyle="bold"
                        android:maxLines="2"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/black" />
                    <TextView
                        android:id="@+id/tvISBN"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/startdateeg"
                        android:maxLines="2"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/black" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pages"
                        android:textStyle="bold"
                        android:maxLines="2"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/black" />
                    <TextView
                        android:id="@+id/tvPages"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/enddateeg"
                        android:maxLines="2"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/black" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/btnLeasebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin_half"
            android:layout_marginLeft="@dimen/iconpadding"
            android:layout_marginRight="@dimen/iconpadding"
            android:text="@string/leasebook"
            android:textColor="@color/white"
            android:background="@drawable/basic_button" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/diver_height"
            android:layout_marginTop="@dimen/formMargin"
            android:background="@color/colorBackground"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>