<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="right"
    android:gravity="right"
    android:minWidth="@dimen/minTextWidth"
    android:background="@drawable/shape_rectangle"
    android:backgroundTint="@color/logo_red"
    android:padding="7dp"
    android:layout_marginBottom="@dimen/formMargin"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/time_tmp"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/white"
            android:textAllCaps="true" />
        <TextView android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_weight="2"
            android:text="@string/librarian_text"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView android:id="@+id/txtMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/myaccommodations"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@android:color/white"/>
</LinearLayout>
