<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    tools:context=".login.RegistrationActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#73FFFFFF" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginLeft="@dimen/iconpadding"
            android:layout_marginRight="@dimen/iconpadding"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/studentno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/student_no"
                android:textColorHint="@color/white"
                app:placeholderTextColor="@color/white"
                app:boxStrokeColor="@color/white"
                app:startIconDrawable="@drawable/ic_baseline_person_24"
                app:startIconTint="@color/white"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etStudentNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLength="30"
                    android:textColor="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:textColorHint="@color/white"
                app:placeholderTextColor="@color/white"
                app:boxStrokeColor="@color/white"
                app:startIconDrawable="@drawable/ic_baseline_person_24"
                app:startIconTint="@color/white"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLength="30"
                    android:textColor="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                app:placeholderTextColor="@color/white"
                app:boxStrokeColor="@color/white"
                app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
                app:startIconTint="@color/white"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:textColor="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/white"
                app:placeholderTextColor="@color/white"
                app:boxStrokeColor="@color/white"
                app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
                app:startIconTint="@color/white"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:textColor="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/login_button_padding"
                android:padding="@dimen/button_corner_radius"
                android:onClick="onClickRegister"
                android:text="@string/register"
                android:textSize="@dimen/textSizeMedium"
                android:textColor="@color/white"
                app:backgroundTint="@color/logo_blue"
                app:strokeColor="@color/white"
                app:strokeWidth="3dp"
                style="?attr/materialButtonOutlinedStyle" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/button_corner_radius"
                android:layout_marginLeft="@dimen/iconpadding"
                android:layout_marginRight="@dimen/iconpadding"
                android:onClick="onClickLogin"
                android:text="@string/login"
                android:textSize="@dimen/textSizeMedium"
                android:textColor="@color/white"
                app:strokeColor="@color/white"
                app:strokeWidth="3dp"
                style="?attr/materialButtonOutlinedStyle" />
        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>